--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ ALO Marker Association Load: Logs
 <H4>Logs</H4>
 <UL>
 <LI><A HREF="/data/loads/mgi/alomrkload/logs/alomrkload.proc.log">Process Summary Log</A>
+<LI><A HREF="/data/loads/mgi/alomrkload/logs/alomrkload.diag.log">Load Diagnostic Log</A>
 <LI><A HREF="/data/loads/mgi/alomrkload/logs/alomrkload.diag.html">Load Diagnostic Log</A>
 </UL>
 
